<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/current"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_current"
        android:title="@string/current" />
    <item android:id="@+id/date"
        android:enabled="true"
        android:icon="@drawable/ic_date"
        app:showAsAction="always"
        android:title="@string/date" />
    <item android:id="@+id/report"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_report"
        android:title="@string/report" />
    <item android:id="@+id/setting"
        android:enabled="true"
        app:showAsAction="always"
        android:icon="@drawable/ic_settings"
        android:title="@string/setting" />
    <item android:id="@+id/test"
        android:enabled="true"
        app:showAsAction="ifRoom"
        android:title="testOnly"
        />


</menu>